deployment/test/clio-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: clio-ui-service-test
  name: clio-ui-service-test
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: clio-ui-test
  type: ClusterIP
