deployment/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: clio-ui-deployment-test
  name: clio-ui-deployment-test
spec:
  selector:
    matchLabels:
      app: clio-ui-test
  template:
    metadata:
      labels:
        app: clio-ui-test
    spec:
      containers:
        - image: #{APP_IMAGE}#
          name: container
          volumeMounts:
            - name: clio-ui-nginx-config-volume
              mountPath: "/etc/nginx/nginx.conf"
              subPath: "nginx.conf"
              readOnly: true
          imagePullPolicy: Always
          envFrom:
            - secretRef:
                name: clio-ui-environment-test
          resources:
            requests:
              cpu: 30m
              memory: 50M
            limits:
              cpu: 30m
              memory: 50M
      volumes:
        - name: clio-ui-nginx-config-volume
          configMap:
            name: clio-ui-nginx-conf-test
