deployment/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clio-ui-ingress-test
  annotations:
    cert-manager.io/issuer: letsencrypt-production
spec:
  ingressClassName: public-iks-k8s-nginx
  tls:
    - hosts:
        - clio-ui.test.eanadev.org
      secretName: clio-ui.test.eanadev.org
  rules:
    - host: clio-ui.test.eanadev.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clio-ui-service-test
                port:
                  number: 8080
